--- a/branching_xblock/static/css/studio_editor.css
+++ b/branching_xblock/static/css/studio_editor.css
@@ -212,6 +212,18 @@
     line-height: 1.3;
 }
 
+.choice-row input.choice-score {
+    flex: none;
+    width: 88px;
+    min-height: 40px;
+    border: 1px solid #c8cdd3;
+    border-radius: 0;
+    padding: 8px 10px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
 .choice-row select.choice-target {
     flex: none;
     width: 170px;
